Show environment variables during deployment
Added echo statement to display environment variables.

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -26,6 +26,7 @@ jobs:
       - name: Show selected environment
         run: |
           echo "Deploying to environment: ${{ inputs.environment }}"
+          echo "env: ${{ VARS }}"
 
       - name: Deploy
         run: |
